objects/ESC_Invoice_Item__c.object
<CustomObject>
    <fields>
        <fullName>ESC_Billing_date__c</fullName>
        <label>Billing date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Invoice Items</relationshipLabel>
        <relationshipName>Invoice_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ESC_Credit_Debit_Indicator__c</fullName>
        <label>Credit/Debit Indicator</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Dispute_Amount__c</fullName>
        <label>Dispute Amount</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Doc_Type__c</fullName>
        <label>Doc Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_InvoiceNumber__c</fullName>
        <label>InvoiceNumber</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Line_number__c</fullName>
        <label>Line number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESC_Net_Amount__c</fullName>
        <label>Net Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ESC_Net_arrears__c</fullName>
        <label>Net arrears</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ESC_Short_description__c</fullName>
        <label>Short description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Invoice Item</label>
    <nameField>
        <displayFormat>IV-{0000}</displayFormat>
        <label>Invoice Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>